------------------------------------------------

  added/removed = a new/removed feature, interfaces, or new 
                  implementation of some feature
  changed       = changed behaviour, modified implementation, APIs, etc
  fixed         = fixed bugs, "features" and other sources of problems

***********************************************************************

xxyy2019 (v2.9.2) -** stable release **-
         - fixed: in some cases (especially in TCP server mode), 
                  cop-set/ctrlp-set/c-mute/c-bypass/cop-bypass caused a full
                  chain reinit, which depending on chain complexity
                  caused a severe glitch in realtime operation
         - fixed: use of obsolete automake and ruby interface [ghedo]
         - fixed: LV2/liblilv build errors due to use deprecated
                  Lilv::Instance::Instance
         - fixed: compiler warnings triggered by gcc-4.7.2 and newer
         - fixed: -ei with output to a ALSA/OSS device was broken in 2.9.1;
                  output to JACK with -ei continues to be unsupported,
                  see BUGS
         - fixed: default mpg123 launch command change to omit "-b 0"
                  as that caused an error with mpg321
         - fixed: alsa - do not ignore small differences in effective sampling
                  rate without a warning with ALSA devices
03012014 (v2.9.1) -** stable release **-
         - changed: configure.in renamed to configure.ac as automake 2.0
                    will drop support for configure.in [ghedo]
         - changed: ecatools now accepts file names with commas [ghedo]
         - changed: build with -D_XOPEN_SOURCE=600, see
                    http://www.unix.org/version3/single_unix_v3.pdf and
                    http://www.unix.org/version3/
         - fixed: compilation errors with Mac Xcode 5.x versions
                  that have dropped llvm-gcc support, reported by
                  Brett Koonce