@@ -307,7 +307,7 @@ and to users who have given feedback, ideas and helped with testing!
  Licensing/distribution policy
 -----------------------------------------------------------------------
 
-Copyright (C) 1997-2014 Kai Vehmanen and others (see the file
+Copyright (C) 1997-2019 Kai Vehmanen and others (see the file
 'AUTHORS' for full list of copyright holders).
 
 Ecasound is freely distributable according to the terms of the 
